# wysiwyg-rich-text-editor-rust-wasm

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
engine/: ARCHITECTURE.md  Cargo.toml  README.md  build.ps1  build.sh
engine/src/: document.rs  layout.rs  lib.rs  render.rs  text.rs
engine/tests/: document_tests.rs  layout_tests.rs  render_tests.rs  text_tests.rs
src/: App.svelte  WasmDemo.svelte
src/lib/: Editor.svelte  EditorWasm.svelte  Page.svelte  Sidebar.svelte  Toolbar.svelte  engine-bridge.ts  stores.ts  types.ts
src/lib/components/: ImageInsertDialog.svelte  ImageOptionsPopup.svelte
src/lib/editor/: canvas-renderer.ts  commands.ts  history-manager.ts  image-manager.ts  index.ts  keyboard-handler.ts  layout-engine.ts  selection-manager.ts  text-measurement.ts  text-operations.ts  types.ts
