[package]
name = "editor-engine"
version = "0.1.0"
edition = "2021"
authors = ["Medilearn"]
description = "High-performance document layout engine for rich text editing"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

# Text shaping (HarfBuzz port to Rust)
rustybuzz = "0.14"

# Font parsing
ttf-parser = "0.21"

# Optional: better panic messages in browser console
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "ImageData",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
